--- a/spring-petclinic-reactjs-master/src/main/resources/application-mysql.properties
+++ b/spring-petclinic-reactjs-master/src/main/resources/application-mysql.properties
@@ -11,6 +11,6 @@ spring.datasource.password=Root@123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database=MYSQL
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 #----------------------------------------------------------------
 # MySQL config end 
