--- a/spring-petclinic-reactjs-master/src/main/resources/application-mysql.properties
+++ b/spring-petclinic-reactjs-master/src/main/resources/application-mysql.properties
@@ -5,9 +5,9 @@
 
 # MySQL config start
 #----------------------------------------------------------------
-spring.datasource.url = jdbc:mysql://localhost:3306/petclinic?useUnicode=true
-spring.datasource.username=root
-spring.datasource.password=Root@123
+spring.datasource.url = jdbc:mysql://petclinic.cz88iac26l49.us-east-1.rds.amazonaws.com:3306/petclinic?useUnicode=true
+spring.datasource.username=venkat
+spring.datasource.password=venkat.k
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database=MYSQL
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
